@@ -718,4 +718,31 @@
         </cobertura-report>
     </target>
 
+    <target name="checkstyle" depends="checkstyle.check, set-checkstyle-classpath" if="checkstyle.home" 
+			description="Run optional third-party tool targets">
+    	<taskdef resource="checkstyletask.properties">
+        	<classpath refid="checkstyle-classpath"/>
+        </taskdef>
+        <mkdir dir="${test.build.dir}"/>
+        <checkstyle config="${test.src.dir}/checkstyle.xml" failOnViolation="false">
+        	<fileset dir="${src.dir}/java" includes="**/*.java" excludes="**/generated/**"/>
+        	<formatter type="xml" toFile="${test.build.dir}/checkstyle-errors.xml"/>
+        </checkstyle>
+        <xslt style="${test.src.dir}/checkstyle-noframes-sorted.xsl" in="${test.build.dir}/checkstyle-errors.xml"
+        	out="${test.build.dir}/checkstyle-errors.html"/>
+    </target>
+
+    <target name="checkstyle.check" unless="checkstyle.home">
+    	<fail message="'checkstyle.home' is not defined. Please pass -Dcheckstyle.home=&lt;base of checkstyle installation&gt; 
+		to Ant on the command-line." />
+    </target>
+    
+    <target name="set-checkstyle-classpath">
+    	<path id="checkstyle-classpath">
+        	<fileset dir="${checkstyle.home}">
+			<include name="**/*.jar"/>
+         	</fileset>
+ 	</path>
+    </target>	
+
 </project>
